# khesht-backend

./: .gitignore  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  warmup_db.py
app/: main.py  schema.py  settings.py
app/helper/: __init__.py  chromadb_helper.py  openai_helper.py  redis_helper.py
app/services/: chat_manager.py  chat_service.py
app/tests/: README.md  config.py  test_user_prompt.py
crawlers/: shab_crawler.py
crawlers/parsers/: parse_shab_room.py
